# GildedRose-Refactoring-Kata

.github/workflows/: python-ci.yml
python/: .gitignore  pyproject.toml  texttest_fixture.py
python/src/: gilded_rose.py
python/tests/: test_gilded_rose.py
