[project]
name = "gilded-rose"
version = "0.0.1"
description = "GildedRose Refactoring Kata"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.10", "pytest==8.3.5"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "EM",  # flake8-errmsg
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # ruff-specific-rules
    "TC",  # flake8-type-checking
    "W",   # pycodestyle warning
]
